[IMP] website: improve SEO by correcting heading tag hierarchy
Complete list of snippets :
s_attributes_horizontal, s_call_to_action, s_card, s_card_offset,
s_card_offset, s_cards_grid, s_cards_soft, s_carousel, s_carousel_cards,
s_company_team, s_company_team_basic, s_company_team_detail,
s_company_team_spotlight, s_comparisons, s_cta_card, s_cta_mobile,
s_cta_mockups, s_faq_collapse, s_faq_list, s_features, s_features_grid,
s_features_wave, s_image_frame, s_image_text_box, s_masonry_block,
s_numbers, s_numbers_charts, s_numbers_list, s_showcase,
s_table_of_content, s_text_highlight, s_three_columns, s_title

Some snippets in website were using inconsistent heading levels
(e.g. h2 directly followed by h6), which harmed both accessibility and
SEO. This commit standardizes the heading hierarchy inside snippets to
ensure a logical structure.

This improves:

1. Natural SEO ranking by providing clearer semantic signals to search
engines.

2. Accessibility for screen readers that rely on a consistent heading
order.

3. Overall readability and maintainability of the themes.

Note that the we preserved the design by applying a `.h*-fs` class
that matches the old heading tag in use.

We also fixed selectors inside tests and adapted the new page templates

task-4349019

--- a/addons/website/views/new_page_template_templates.xml
+++ b/addons/website/views/new_page_template_templates.xml
@@ -683,14 +683,14 @@ overridden by modules), because:
 <template id="new_page_template_s_three_columns" inherit_id="website.s_three_columns" primary="True"/>
 
 <template id="new_page_template_about_s_three_columns" inherit_id="website.new_page_template_s_three_columns" primary="True">
-    <xpath expr="//h3|//h4|//h5" position="replace">
-        <h3 class="card-title">Our Story</h3>
+    <xpath expr="//h2|//h3|//h4|//h5" position="replace">
+        <h2 class="card-title h5-fs">Our Story</h2>
     </xpath>
-    <xpath expr="(//h3|//h4|//h5)[2]" position="replace">
-        <h3 class="card-title">Our Mission</h3>
+    <xpath expr="(//h2|//h3|//h4|//h5)[2]" position="replace">
+        <h2 class="card-title h5-fs">Our Mission</h2>
     </xpath>
-    <xpath expr="(//h3|//h4|//h5)[3]" position="replace">
-        <h3 class="card-title">Our Values</h3>
+    <xpath expr="(//h2|//h3|//h4|//h5)[3]" position="replace">
+        <h2 class="card-title h5-fs">Our Values</h2>
     </xpath>
     <xpath expr="//p" position="replace">
         <p class="card-text">Step into our past and witness the transformation of a simple idea into an innovative force. Our journey, born in a garage, reflects the power of passion and hard work.</p>
@@ -706,14 +706,14 @@ overridden by modules), because:
 <template id="new_page_template_landing_s_three_columns" inherit_id="website.new_page_template_s_three_columns" primary="True"/>
 
 <template id="new_page_template_landing_2_s_three_columns" inherit_id="website.new_page_template_landing_s_three_columns" primary="True">
-    <xpath expr="//h3|//h4|//h5" position="replace">
-        <h3 class="card-title">Personalized Workouts</h3>
+    <xpath expr="//h2|//h3|//h4|//h5" position="replace">
+        <h2 class="card-title h5-fs">Personalized Workouts</h2>
     </xpath>
-    <xpath expr="(//h3|//h4|//h5)[2]" position="replace">
-        <h3 class="card-title">Nutritional Guidance</h3>
+    <xpath expr="(//h2|//h3|//h4|//h5)[2]" position="replace">
+        <h2 class="card-title h5-fs">Nutritional Guidance</h2>
     </xpath>
-    <xpath expr="(//h3|//h4|//h5)[3]" position="replace">
-        <h3 class="card-title">Progress Tracking</h3>
+    <xpath expr="(//h2|//h3|//h4|//h5)[3]" position="replace">
+        <h2 class="card-title h5-fs">Progress Tracking</h2>
     </xpath>
     <xpath expr="//p" position="replace">
         <p class="card-text">Our experienced fitness coaches design workouts that align with your goals, fitness level, and preferences.</p>
@@ -727,14 +727,14 @@ overridden by modules), because:
 </template>
 
 <template id="new_page_template_landing_3_s_three_columns" inherit_id="website.new_page_template_landing_s_three_columns" primary="True">
-    <xpath expr="//h3|//h4|//h5" position="replace">
-        <h3 class="card-title">Amazing Sound Quality</h3>
+    <xpath expr="//h2|//h3|//h4|//h5" position="replace">
+        <h2 class="card-title h5-fs">Amazing Sound Quality</h2>
     </xpath>
-    <xpath expr="(//h3|//h4|//h5)[2]" position="replace">
-        <h3 class="card-title">Wireless Freedom</h3>
+    <xpath expr="(//h2|//h3|//h4|//h5)[2]" position="replace">
+        <h2 class="card-title h5-fs">Wireless Freedom</h2>
     </xpath>
-    <xpath expr="(//h3|//h4|//h5)[3]" position="replace">
-        <h3 class="card-title">All-Day Comfort</h3>
+    <xpath expr="(//h2|//h3|//h4|//h5)[3]" position="replace">
+        <h2 class="card-title h5-fs">All-Day Comfort</h2>
     </xpath>
 </template>
 
@@ -742,14 +742,14 @@ overridden by modules), because:
 <template id="new_page_template_services_s_three_columns" inherit_id="website.new_page_template_s_three_columns" primary="True"/>
 
 <template id="new_page_template_services_0_s_three_columns" inherit_id="website.new_page_template_services_s_three_columns" primary="True">
-    <xpath expr="//h3|//h4|//h5" position="replace">
-        <h3 class="card-title">Wellness Coaching</h3>
+    <xpath expr="//h2|//h3|//h4|//h5" position="replace">
+        <h2 class="card-title h5-fs">Wellness Coaching</h2>
     </xpath>
-    <xpath expr="(//h3|//h4|//h5)[2]" position="replace">
-        <h3 class="card-title">Strength Training: </h3>
+    <xpath expr="(//h2|//h3|//h4|//h5)[2]" position="replace">
+        <h2 class="card-title h5-fs">Strength Training: </h2>
     </xpath>
-    <xpath expr="(//h3|//h4|//h5)[3]" position="replace">
-        <h3 class="card-title">Weight Loss Transformation</h3>
+    <xpath expr="(//h2|//h3|//h4|//h5)[3]" position="replace">
+        <h2 class="card-title h5-fs">Weight Loss Transformation</h2>
     </xpath>
     <xpath expr="//p" position="replace">
         <p class="card-text">Our Coaching combines personalized fitness plans with mindfulness practices, ensuring you achieve harmony in your body and peace in your mind.</p>
@@ -765,14 +765,14 @@ overridden by modules), because:
 <template id="new_page_template_team_s_three_columns" inherit_id="website.new_page_template_s_three_columns" primary="True"/>
 
 <template id="new_page_template_team_0_s_three_columns" inherit_id="website.new_page_template_team_s_three_columns" primary="True">
-    <xpath expr="//h3|//h4|//h5" position="replace">
-        <h3 class="card-title">Tony Fred, CEO</h3>
+    <xpath expr="//h2|//h3|//h4|//h5" position="replace">
+        <h2 class="card-title h5-fs">Tony Fred, CEO</h2>
     </xpath>
-    <xpath expr="(//h3|//h4|//h5)[2]" position="replace">
-        <h3 class="card-title">Mich Stark, COO</h3>
+    <xpath expr="(//h2|//h3|//h4|//h5)[2]" position="replace">
+        <h2 class="card-title h5-fs">Mich Stark, COO</h2>
     </xpath>
-    <xpath expr="(//h3|//h4|//h5)[3]" position="replace">
-        <h3 class="card-title">Aline Turner, CTO</h3>
+    <xpath expr="(//h2|//h3|//h4|//h5)[3]" position="replace">
+        <h2 class="card-title h5-fs">Aline Turner, CTO</h2>
     </xpath>
     <xpath expr="//div[hasclass('card')]//p|//div[hasclass('card-wrapper')]//p" position="replace">
         <p class="card-text">Founder and chief visionary, Tony is the driving force behind the company. He loves to keep his hands full by participating in the development of the software, marketing, and customer experience strategies.</p>
@@ -808,14 +808,14 @@ overridden by modules), because:
     <xpath expr="//section" position="attributes">
         <attribute name="data-snippet">s_three_columns</attribute>
     </xpath>
-    <xpath expr="//h3|//h4|//h5" position="replace">
-        <h3 class="card-title">Menu One</h3>
+    <xpath expr="//h2|//h3|//h4|//h5" position="replace">
+        <h2 class="card-title h5-fs">Menu One</h2>
     </xpath>
-    <xpath expr="(//h3|//h4|//h5)[2]" position="replace">
-        <h3 class="card-title">Menu Two</h3>
+    <xpath expr="(//h2|//h3|//h4|//h5)[2]" position="replace">
+        <h2 class="card-title h5-fs">Menu Two</h2>
     </xpath>
-    <xpath expr="(//h3|//h4|//h5)[3]" position="replace">
-        <h3 class="card-title">All You Can Eat</h3>
+    <xpath expr="(//h2|//h3|//h4|//h5)[3]" position="replace">
+        <h2 class="card-title h5-fs">All You Can Eat</h2>
     </xpath>
     <xpath expr="//p" position="replace">
         <p class="card-text">Vegetable Salad, Beef Burger and Mango Ice Cream</p>
@@ -843,13 +843,13 @@ overridden by modules), because:
 <template id="new_page_template_s_showcase" inherit_id="website.s_showcase" primary="True"/>
 
 <template id="new_page_template_landing_s_showcase" inherit_id="website.new_page_template_s_showcase" primary="True">
-    <xpath expr="//h5" position="replace" mode="inner">
+    <xpath expr="//h3" position="replace" mode="inner">
         Intuitive Touch Controls
     </xpath>
-    <xpath expr="(//h5)[2]" position="replace" mode="inner">
+    <xpath expr="(//h3)[2]" position="replace" mode="inner">
         Secure and Comfortable Fit
     </xpath>
-    <xpath expr="(//h5)[3]" position="replace" mode="inner">
+    <xpath expr="(//h3)[3]" position="replace" mode="inner">
         On-the-Go Charging
     </xpath>
     <xpath expr="//p" position="replace">
