[IMP] stock: adapt pdfs for pack in pack
As we can now have package inside packages, we need to update the
following PDFs:
- Packages with content
- Delivery note
- Picking operations
To properly reflect these changes.

Also, as package histories are meant to mimic packages visually on the
user end, add reports for them which simply points to their linked
package.

Task-4314600

--- a/addons/stock/report/package_templates.xml
+++ b/addons/stock/report/package_templates.xml
@@ -29,5 +29,10 @@
                 </t>
             </t>
         </template>
+
+        <template id="label_package_history_template_view">
+            <t t-set="docs" t-value="docs.package_id"/>
+            <t t-call="stock.label_package_template_view"/>
+        </template>
     </data>
 </odoo>
