[FIX] payment,payment_stripe: add missing server action for Stripe activation
Steps to Reproduce:
1. Go to the website e-commerce shop and add a product to the cart.
2. Proceed to checkout and reach the Payment step.
3. Click the Activate Stripe button.
4. Warning message pop-up:
   Missing Action – The action 'payment.action_activate_stripe' does not exist.

Description:
This commit fixes the broken Stripe activation flow by adding the missing
server action. With this in place, users can activate and set up the available
payment provider without warning on the checkout page in e-commerce.

Before this commit:
- Clicking Activate Stripe on the checkout page raised a warning:
   The action 'payment.action_activate_stripe' does not exist.
- The Stripe payment provider could not be activated from the checkout e-commerce.

After this commit:
- Added a server action in`ir_actions_server_data.xml`.
- Clicking on the button  now triggers the payment onboarding process
  via `res.config.settings._start_payment_onboarding()`.
- Users can correctly activate and configure available provider from the Payment
  Providers screen.

opw-5022767

closes odoo/odoo#227750

X-original-commit: 93ee2c0363b84f45b7c78d91ab534b876418fd5f
Related: odoo/upgrade#8491
Signed-off-by: Antoine Vandevenne (anv) <anv@odoo.com>

--- a/addons/payment/views/payment_form_templates.xml
+++ b/addons/payment/views/payment_form_templates.xml
@@ -419,14 +419,19 @@
                 <p t-else="">
                     No payment providers are configured.
                 </p>
+                <t
+                    t-set="onboarding_provider"
+                    t-value="request.env['res.config.settings'].sudo().new({}).onboarding_payment_module"
+                />
                 <a
-                    t-if="request.env.company.country_id.is_stripe_supported_country
-                          and not providers_sudo"
-                    name="activate_stripe"
-                    href="/odoo/action-payment.action_activate_stripe"
+                    t-if="onboarding_provider and not providers_sudo"
+                    name="start_payment_onboarding"
+                    href="/odoo/action-payment.action_start_payment_onboarding"
                     role="button"
                     class="btn btn-primary me-2"
-                > ACTIVATE STRIPE </a>
+                >
+                    ACTIVATE <t t-out="onboarding_provider.upper()"/>
+                </a>
                 <a
                     t-if="availability_report"
                     role="button"
