--- a/addons/website_crm_partner_assign/views/crm_lead_views.xml
+++ b/addons/website_crm_partner_assign/views/crm_lead_views.xml
@@ -20,7 +20,8 @@
                                     <span class="opacity-50" invisible="partner_longitude &gt;= 0">W </span>
                                     <span class="opacity-50 ps-1">) </span>
                                 </div>
-                                <field name="partner_assigned_id" domain="[('grade_id','!=',False)]" context="{'partner_set_default_grade_activation': 1}"/>
+                                <field name="partner_assigned_id" domain="[('grade_id','!=',False)]" context="{'partner_set_default_grade_activation': 1}"
+                                    widget="many2one_avatar"/>
                             </group>
                             <group>
                                 <button colspan="2" string="Automatic Assignment" name="action_assign_partner" type="object" class="btn-link pt-0 ps-0"/>
